        color:#C0F0C0;
        font-size:0.8em;
        margin-bottom:1em;
        text-align:center }
      div.freetext { color:#F0F0F0 }
      div.list     { color:#C0C0F0 }
    </style>
  </head>
  <body>
    $ 1.4-DEV
      % Version 14
      _ 2016-xx-xx
      ! Important due to new method for Domogik 0.4+ command, it's strongly recommended to synchronize again with Domogik.
      * #69 Widget command whit multiple parameters
      * #68 Android > KitKat image picker method change
      * Add multiple parameters for 0.4 command (need a resync)
      * Add color picker RGB for 0.4 command
      * Change power management method
      * Correct history for callerid in 0.3
      * Adding a new method from fritz to callurl in background (for command)
      * Correct ANR by adding timeout in http connection
      * Add icon for bluetooth and battery
      * Correct maps widget state
      * Still more translation ;)
      % Version 13
      _ 2015-12-21
      * Correct Map no more editable
      * Correct history for callerid in 0.5
      * Add lot of translation again
      * Correct a crash with navigation drawer if by usage
      % Version 12
      _ 2015-12-20
      * Working with non xpl plugin and 0.5
      * #24 start working on navigation drawer
      * #30 Solved disk space converted (no more 1.4e7)
      * Translate command (for display in list and widget)
      * Update RU translation (nearly finished)
      * Solved MqListener never shutdown (draining battery)
      * Solved Sync error if no xplstat in device json
      * Solved Map crash (memory leak)
      * #23 Solved Map AutoZoom working (3 years old bug)
      * #58 Start passing all log level in apps
      * Make log to screen works.
      * Now dev with Android Studio
      % Version 11
      _ 2015-11-29
      * Update translation RU/FR/NL
	  * Solved #57 free_command widget for number limit to number keyboard but allow float value with a "."
	  * Change api version check to allow sync with 0.8